Adding a bit of the glue to handle errors. The CPU, on an invalid memory access, will now throw an error. If the debugger is not attached, a dialog will be shown requesting that the user attach it (and it will try to attach it if it can). If a debugger is attached already or after the debugger connects, the error will be handed off to it.
There are a lot of other error types that can be handled like this (code generation errors, a variety of BIOS errors, etc), but I wanted to get thing set before handling those. I also have a few more things I need to fix before the debugger interaction will work right (for example, I need to ensure that I'm saving the PC back in the right places, or else the debugger won't be able to use the callstack information right). I'd also like to give the Error types a few more properties to make them a little more useful (instead of just a string container like they are now).

As for this commit, if you aren't using the debugger and aren't hitting errors, you won't notice the changes. If you are hitting errors, you'll get a pretty dialog. If you are using the debugger, you'll get a new Debugger.Break where the future debugger code will go.

--- a/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
+++ b/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
@@ -49,6 +49,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AttachDebuggerDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AttachDebuggerDialog.Designer.cs">
+      <DependentUpon>AttachDebuggerDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Configuration\ConfigurationHost.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -99,6 +105,10 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="AttachDebuggerDialog.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>AttachDebuggerDialog.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Configuration\ConfigurationHost.resx">
       <SubType>Designer</SubType>
       <DependentUpon>ConfigurationHost.cs</DependentUpon>
