Refactoring of some debug stuff. Tweaked some file stuff.
Now load games at 0x08000000 (lower bound of user memory) - otherwise PC won't run (allocs 18mb of ram, which is no good if the app loads at 0x089..).
Fixed memory block allocation bug for PC - this may have caused errors in other games, too.

PC runs until it tries to load files by LBN - interesting. ector was making fun of my crappy ISO plugin, so it may be time to fix that up. After playing Odin Sphere I really want to play Princess Crown :)

--- a/Noxa.Emulation.Psp/Noxa.Emulation.Psp.csproj
+++ b/Noxa.Emulation.Psp/Noxa.Emulation.Psp.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Bios\BiosFunction.cs" />
     <Compile Include="Bios\BiosFunctionAttribute.cs" />
     <Compile Include="Bios\BiosModule.cs" />
+    <Compile Include="Bios\BiosModuleAliasAttribute.cs" />
     <Compile Include="Bios\IBios.cs" />
     <Compile Include="Bios\ILoader.cs" />
     <Compile Include="Bios\IModule.cs" />
@@ -61,8 +62,11 @@
     <Compile Include="Cpu\MemorySystem.cs" />
     <Compile Include="Debugging\DebugData\IDebugDatabase.cs" />
     <Compile Include="Debugging\DebugHost.cs" />
+    <Compile Include="Debugging\DebugModel\BiosError.cs" />
     <Compile Include="Debugging\DebugModel\BiosFunctionToken.cs" />
     <Compile Include="Debugging\DebugModel\Breakpoint.cs" />
+    <Compile Include="Debugging\DebugModel\CpuError.cs" />
+    <Compile Include="Debugging\DebugModel\MemoryError.cs" />
     <Compile Include="Debugging\Hooks\IHook.cs" />
     <Compile Include="Debugging\Hooks\IVideoHook.cs" />
     <Compile Include="Debugging\IDebuggable.cs" />
@@ -111,6 +115,7 @@
     <Compile Include="Video\DisplayProperties.cs" />
     <Compile Include="Video\IVideoCapabilities.cs" />
     <Compile Include="Video\IVideoDriver.cs" />
+    <Compile Include="Video\VideoCallbacks.cs" />
     <Compile Include="Video\VideoCommand.cs" />
   </ItemGroup>
   <ItemGroup>
