Added BITREV - currently untested. Now throw up the pretty debugger dialog on invalid instructions.
Added basic VFPU support (no implementations, just tables/etc). Taken from GCC. It's currently slow, but who cares - compared to some of the other crazy stuff I do during generation, it's not that bad.

Disgaea runs up until it gets stuck in a tight loop (need to investigate). JDA seems to get stuck in a loop too. Maybe it's a generation bug or something. Would be nice if I had a debugger...

--- a/Noxa.Emulation.Psp.Cpu.R4000Ultra/Noxa.Emulation.Psp.Cpu.R4000Ultra.vcproj
+++ b/Noxa.Emulation.Psp.Cpu.R4000Ultra/Noxa.Emulation.Psp.Cpu.R4000Ultra.vcproj
@@ -309,6 +309,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\R4000Vfpu.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\R4000VideoInterface.cpp"
 				>
 			</File>
@@ -424,6 +428,14 @@
 			</File>
 			<File
 				RelativePath=".\R4000Statistics.h"
+				>
+			</File>
+			<File
+				RelativePath=".\R4000Vfpu.h"
+				>
+			</File>
+			<File
+				RelativePath=".\R4000Vfpu_Instructions.h"
 				>
 			</File>
 			<File
