--- a/Noxa.Emulation.Psp/Noxa.Emulation.Psp.csproj
+++ b/Noxa.Emulation.Psp/Noxa.Emulation.Psp.csproj
@@ -28,6 +28,7 @@
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <DocumentationFile>bin\Debug\Noxa.Emulation.Psp.XML</DocumentationFile>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
