More debugging stuff. Lots of it is untested. Only BIOS imports getting added to the database now - need to add symbol loading to Loader.

--- a/Noxa.Emulation.Psp.Bios.ManagedHLE/Noxa.Emulation.Psp.Bios.ManagedHLE.csproj
+++ b/Noxa.Emulation.Psp.Bios.ManagedHLE/Noxa.Emulation.Psp.Bios.ManagedHLE.csproj
@@ -39,6 +39,7 @@
   <ItemGroup>
     <Compile Include="Bios.Debugging.cs" />
     <Compile Include="BiosDebugHook.cs" />
+    <Compile Include="DebugDatabase.cs" />
     <Compile Include="Kernel Types\KCallback.cs" />
     <Compile Include="Kernel Types\KDevice.cs" />
     <Compile Include="Kernel Types\KMutex.cs" />
