--- a/Noxa.Utilities/Noxa.Utilities.csproj
+++ b/Noxa.Utilities/Noxa.Utilities.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomTools.cs" />
     <Compile Include="Range.cs" />
+    <Compile Include="RangedLinkedList.cs" />
     <Compile Include="ReadOnlyDictionary.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="TimerQueue.cs" />
