New loader analysis pass - can extract method listing from .text. Across sample1.elf it is perfect. Haven't tested against PB yet (which although probably compiled with gcc, has some crazy inline assembly areas in it).

--- a/Noxa.Emulation.Psp.Bios.ManagedHLE/Noxa.Emulation.Psp.Bios.ManagedHLE.csproj
+++ b/Noxa.Emulation.Psp.Bios.ManagedHLE/Noxa.Emulation.Psp.Bios.ManagedHLE.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Kernel.Scheduling.cs" />
     <Compile Include="Kernel.Timers.cs" />
     <Compile Include="Bios.cs" />
+    <Compile Include="Loader.Analysis.cs" />
     <Compile Include="Loader.cs" />
     <Compile Include="ManagedHLE.cs" />
     <Compile Include="Module.cs" />
