--- a/Noxa.Utilities.Controls/Noxa.Utilities.Controls.csproj
+++ b/Noxa.Utilities.Controls/Noxa.Utilities.Controls.csproj
@@ -62,6 +62,9 @@
       <DependentUpon>GraphicalHeader.cs</DependentUpon>
     </Compile>
     <Compile Include="IconUtilities.cs" />
+    <Compile Include="ImagedListView.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WhidbeyTabCollection.cs" />
     <Compile Include="WhidbeyTabControl.cs">
