--- a/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
+++ b/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.EnterpriseServices" />
+    <Reference Include="System.Runtime.Serialization, Version=3.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
@@ -61,6 +62,7 @@
     <Compile Include="Configuration\ConfigurationHost.Designer.cs">
       <DependentUpon>ConfigurationHost.cs</DependentUpon>
     </Compile>
+    <Compile Include="GameCache.cs" />
     <Compile Include="GamePicker\AdvancedGameListing.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -229,6 +231,12 @@
     <Content Include="Resources\ClearIcon.png" />
     <None Include="Resources\ErrorIcon.png" />
     <None Include="Resources\CopyIcon.png" />
+    <Content Include="Resources\Flag0.png" />
+    <Content Include="Resources\Flag1.png" />
+    <Content Include="Resources\Flag2.png" />
+    <Content Include="Resources\Flag3.png" />
+    <Content Include="Resources\Flag4.png" />
+    <Content Include="Resources\Flag5.png" />
     <Content Include="Resources\Google.png" />
     <Content Include="Resources\IconBackground.png" />
     <None Include="Resources\InfoIcon.png" />
