--- a/Noxa.Emulation.Psp.CodeGen/Noxa.Emulation.Psp.CodeGen.vcproj
+++ b/Noxa.Emulation.Psp.CodeGen/Noxa.Emulation.Psp.CodeGen.vcproj
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="Noxa.Emulation.Psp.CodeGen"
 	ProjectGUID="{3BA8A34E-E779-4282-9566-2E0FE1D507FC}"
 	RootNamespace="NoxaEmulationPspCodeGen"
 	Keyword="Win32Proj"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
