--- a/Noxa.Emulation.Psp.RemoteDebugger/Noxa.Emulation.Psp.RemoteDebugger.csproj
+++ b/Noxa.Emulation.Psp.RemoteDebugger/Noxa.Emulation.Psp.RemoteDebugger.csproj
@@ -1,4 +1,4 @@
-﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -10,6 +10,11 @@
     <RootNamespace>Noxa.Emulation.Psp.RemoteDebugger</RootNamespace>
     <AssemblyName>Noxa.Emulation.Psp.RemoteDebugger</AssemblyName>
     <ApplicationIcon>Resources\pspdev.ico</ApplicationIcon>
+    <FileUpgradeFlags>
+    </FileUpgradeFlags>
+    <OldToolsVersion>2.0</OldToolsVersion>
+    <UpgradeBackupLocation>
+    </UpgradeBackupLocation>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
