--- a/Noxa.Emulation.Psp.Bios.ManagedHLE/Noxa.Emulation.Psp.Bios.ManagedHLE.csproj
+++ b/Noxa.Emulation.Psp.Bios.ManagedHLE/Noxa.Emulation.Psp.Bios.ManagedHLE.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.50727</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{4B161B6A-14B4-4874-A883-F8D84ED733A7}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -48,6 +48,7 @@
     <Compile Include="Kernel Types\KCallback.cs" />
     <Compile Include="Kernel Types\KDevice.cs" />
     <Compile Include="Kernel Types\KMutex.cs" />
+    <Compile Include="Kernel Types\KPipe.cs" />
     <Compile Include="Kernel Types\KThread.Waiting.cs" />
     <Compile Include="Kernel.cs" />
     <Compile Include="Kernel Types\KEvent.cs" />
