minor tweaks and fixes I've spent the past 3 days of my week vacation banging my head against the wall trying to figure out why jeanne de arc is not working, and am giving up this project is supposed to be for fun, so now I'm going to move on to something more fun: an awesome ge plugin (maybe :)

--- a/Tests/mysamples/reveng/Makefile
+++ b/Tests/mysamples/reveng/Makefile
@@ -1,5 +1,6 @@
 TARGET = reveng
-OBJS = main.o
+EXTRAS_OBJS = SysMemUserForUser_0000.o SysMemUserForUser_0008.o SysMemUserForUser_0009.o
+OBJS = main.o $(EXTRAS_OBJS)
 
 INCDIR = 
 CFLAGS = -O2 -G0 -Wall
@@ -11,6 +12,9 @@ LDFLAGS =
 
 EXTRA_TARGETS = EBOOT.PBP
 PSP_EBOOT_TITLE = Reverse Engineer
+
+$(EXTRAS_OBJS): extras.S
+	@$(CC) $(CFLAGS) -c $< -o $@
 
 PSPSDK=$(shell psp-config --pspsdk-path)
 include $(PSPSDK)/lib/build.mak
