Changes to IVideoDriver to make managed video drivers possible. Cleaned it up a bit too. Updated the C++/CLI driver work in the new world.
Skeleton of the new ManagedGL video driver. Uses Tao. Currently just enough to run most games with no graphics - it'll take the lists and 'process' them, returning all the right stuff.
Some major points:
- Single threaded - the old video plugin was multithreaded, but synchronized - this added a lot of unnecessary complexity. In the future, if I can figure out a nice way to make it multithreaded, I will.
- Shader based - the old plugin used the fixed function pipeline, which made things really easy (could call glVertex, etc), but relatively slow (averaging 14000 gl calls a display list) and inflexible. To do lighting, morphing/skinning, etc without killing myself, shaders are the way to go.
- C# - one small step in my goal to get everything in managed code. Since it's using Tao, it should be able to run on mono no problem. It also means that I can run without unmanaged debugging enabled and use edit and continue. In a year when cpu speeds go up again, I'll move the CPU over too.

Next step is to figure out how I want to set up list processing... that's hard.

--- a/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
+++ b/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.50727</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{1497FF04-09C9-4D55-A617-E4EB10747319}</ProjectGuid>
     <OutputType>WinExe</OutputType>
@@ -172,6 +172,12 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="Properties\Settings.cs" />
+    <Compile Include="RenderControl.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="RenderControl.Designer.cs">
+      <DependentUpon>RenderControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="ServiceTools\CheckCompatability.cs">
       <SubType>Form</SubType>
     </Compile>
