Lots of work on the new video plugin - trying to make it better than the old one... I hope it is :P Still doesn't render anything, but is about there.
I'm still learning GLSL (and I realize now that I like HLSL better) - I don't even know if the shaders here compile.

--- a/Noxa.Emulation.Psp.Video.ManagedGL/Noxa.Emulation.Psp.Video.ManagedGL.csproj
+++ b/Noxa.Emulation.Psp.Video.ManagedGL/Noxa.Emulation.Psp.Video.ManagedGL.csproj
@@ -60,7 +60,10 @@
     <Compile Include="MGLCapabilities.cs" />
     <Compile Include="MGLDriver.cs" />
     <Compile Include="MGLDriver.Lists.cs" />
+    <Compile Include="MGLDriver.Primitives.cs" />
     <Compile Include="MGLDriver.Setup.cs" />
+    <Compile Include="MGLDriver.StateManagement.cs" />
+    <Compile Include="MGLDriver.TextureTransfer.cs" />
     <Compile Include="MGLDriver.Worker.cs" />
     <Compile Include="MGLDriverHook.cs" />
     <Compile Include="MGLListCache.cs" />
@@ -68,6 +71,7 @@
     <Compile Include="MGLStatistics.cs" />
     <Compile Include="MGLStatisticsSource.cs" />
     <Compile Include="MGLTextureCache.cs" />
+    <Compile Include="MGLUtilities.cs" />
     <Compile Include="NativeMethods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GLProgram.cs" />
