Got shaders loading with special wrapper class stuff. Not done, but almost ready to use them. Fixed Default.vert so it compiles. Not sure how I want to do the different shader combinations. Ideally there will only be 2-3 of each type, and not all combinations will be used. But a DefaultClut, SpriteClut, SpriteDefault, etc set may make sense. I'm really just concerned with performance - by having 6 classes that are tuned for the task, I think it's worth not having it be all fancy and generic.

--- a/Noxa.Emulation.Psp.Video.ManagedGL/Noxa.Emulation.Psp.Video.ManagedGL.csproj
+++ b/Noxa.Emulation.Psp.Video.ManagedGL/Noxa.Emulation.Psp.Video.ManagedGL.csproj
@@ -75,6 +75,7 @@
     <Compile Include="NativeMethods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GLProgram.cs" />
+    <Compile Include="Programs\DefaultProgram.cs" />
     <Compile Include="Types.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -102,10 +103,18 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Shaders\Clut.frag" />
-    <None Include="Shaders\Default.frag" />
-    <None Include="Shaders\Default.vert" />
-    <None Include="Shaders\Sprite.vert" />
+    <Content Include="Shaders\Clut.frag">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Shaders\Default.frag">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Shaders\Default.vert">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Shaders\Sprite.vert">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
