started bezier stuff alpha blending added - still just as broken as before with no GU_FIX and stuff
had to give up on jeanne de arc cause it uses patch primitives, which will be even harder to implement than bezier surfaces were... bah

--- a/Noxa.Emulation.Psp.Video.ManagedGL/Noxa.Emulation.Psp.Video.ManagedGL.csproj
+++ b/Noxa.Emulation.Psp.Video.ManagedGL/Noxa.Emulation.Psp.Video.ManagedGL.csproj
@@ -63,6 +63,7 @@
     <Compile Include="MGLDriver.Primitives.cs" />
     <Compile Include="MGLDriver.Setup.cs" />
     <Compile Include="MGLDriver.StateManagement.cs" />
+    <Compile Include="MGLDriver.Patches.cs" />
     <Compile Include="MGLDriver.TextureTransfer.cs" />
     <Compile Include="MGLDriver.Worker.cs" />
     <Compile Include="MGLDriverHook.cs" />
