Some very old changes made when I was trying to get some game working. May fix some of the 'your game is dead' messages.

--- a/Noxa.Emulation.Psp.Bios.ManagedHLE/Noxa.Emulation.Psp.Bios.ManagedHLE.csproj
+++ b/Noxa.Emulation.Psp.Bios.ManagedHLE/Noxa.Emulation.Psp.Bios.ManagedHLE.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Modules\sceMpeg.cs" />
     <Compile Include="Modules\sceNet.cs" />
     <Compile Include="Modules\sceNetApctl.cs" />
+    <Compile Include="Modules\sceNetIfhandle.cs" />
     <Compile Include="Modules\sceNetInet.cs" />
     <Compile Include="Modules\sceNetResolver.cs" />
     <Compile Include="Modules\scePower.cs" />
