--- a/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
+++ b/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
@@ -123,6 +123,12 @@
     <Compile Include="Debugger\Tools\CodeTool.Designer.cs">
       <DependentUpon>CodeTool.cs</DependentUpon>
     </Compile>
+    <Compile Include="Debugger\Tools\DisassemblyControl.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Debugger\Tools\DisassemblyControl.Designer.cs">
+      <DependentUpon>DisassemblyControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Debugger\Tools\LogTool.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -236,6 +242,14 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Debugger\DebuggerWindow.resx">
       <DependentUpon>DebuggerWindow.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Debugger\Tools\CodeTool.resx">
+      <DependentUpon>CodeTool.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Debugger\Tools\DisassemblyControl.resx">
+      <DependentUpon>DisassemblyControl.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="GamePicker\AdvancedGameListing.resx">
