--- a/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
+++ b/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
@@ -244,12 +244,28 @@
       <DependentUpon>DebuggerWindow.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Debugger\Tools\CallstackTool.resx">
+      <DependentUpon>CallstackTool.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Debugger\Tools\CodeTool.resx">
       <DependentUpon>CodeTool.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Debugger\Tools\DisassemblyControl.resx">
       <DependentUpon>DisassemblyControl.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Debugger\Tools\LogTool.resx">
+      <DependentUpon>LogTool.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Debugger\Tools\RegistersTool.resx">
+      <DependentUpon>RegistersTool.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Debugger\Tools\StatisticsTool.resx">
+      <DependentUpon>StatisticsTool.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="GamePicker\AdvancedGameListing.resx">
