Working on new disassembly view that allows for scrolling through all detected methods in memory - it should be updated whenever the loader does something, so delay loaded prxs should show up. It currently doesn't display anything useful, has no real input behavior, and doesn't do anything... *sigh*

--- a/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
+++ b/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Debugger\Model\Bookmark.cs" />
     <Compile Include="Debugger\Model\BreakpointEventArgs.cs" />
     <Compile Include="Debugger\Model\BreakpointManager.cs" />
+    <Compile Include="Debugger\Model\CodeCache.cs" />
     <Compile Include="Debugger\Model\InstructionFormatter.cs" />
     <Compile Include="Debugger\Model\InstructionTables.cs" />
     <Compile Include="Debugger\Model\MethodBody.cs" />
@@ -138,6 +139,12 @@
     </Compile>
     <Compile Include="Debugger\Tools\CodeTool.Designer.cs">
       <DependentUpon>CodeTool.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Debugger\Tools\CodeViewControl.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Debugger\Tools\CodeViewControl.Designer.cs">
+      <DependentUpon>CodeViewControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Debugger\Tools\DisassemblyControl.cs">
       <SubType>Component</SubType>
