--- a/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
+++ b/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
@@ -176,11 +176,11 @@
     <Compile Include="Debugger\Tools\ModulesTool.Designer.cs">
       <DependentUpon>ModulesTool.cs</DependentUpon>
     </Compile>
-    <Compile Include="Debugger\Tools\RegistersTool.cs">
-      <SubType>Form</SubType>
+    <Compile Include="Debugger\Tools\RegistersControl.cs">
+      <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Debugger\Tools\RegistersTool.Designer.cs">
-      <DependentUpon>RegistersTool.cs</DependentUpon>
+    <Compile Include="Debugger\Tools\RegistersControl.Designer.cs">
+      <DependentUpon>RegistersControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Debugger\Tools\StatisticsTool.cs">
       <SubType>Form</SubType>
@@ -293,10 +293,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Debugger\Tools\MemoryTool.resx">
       <DependentUpon>MemoryTool.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Debugger\Tools\RegistersTool.resx">
-      <DependentUpon>RegistersTool.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Debugger\Tools\StatisticsTool.resx">
