--- a/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
+++ b/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
@@ -283,6 +283,10 @@
       <DependentUpon>CodeTool.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Debugger\Tools\CodeViewControl.resx">
+      <DependentUpon>CodeViewControl.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Debugger\Tools\DisassemblyControl.resx">
       <DependentUpon>DisassemblyControl.cs</DependentUpon>
       <SubType>Designer</SubType>
