simple log display for rick ;) no clipboard, no filtering, and not pretty, but it is fast

--- a/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
+++ b/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
@@ -152,6 +152,12 @@
     <Compile Include="Debugger\Tools\DisassemblyControl.Designer.cs">
       <DependentUpon>DisassemblyControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Debugger\Tools\LogControl.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Debugger\Tools\LogControl.Designer.cs">
+      <DependentUpon>LogControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Debugger\Tools\LogTool.cs">
       <SubType>Form</SubType>
     </Compile>
