minor log tweaks copy/clear options in context menu

--- a/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
+++ b/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
@@ -294,6 +294,10 @@
       <DependentUpon>DisassemblyControl.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Debugger\Tools\LogControl.resx">
+      <DependentUpon>LogControl.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Debugger\Tools\LogTool.resx">
       <DependentUpon>LogTool.cs</DependentUpon>
       <SubType>Designer</SubType>
