--- a/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
+++ b/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
@@ -46,6 +46,10 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Dependencies\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="Puzzle.CoreLib.NET2, Version=1.0.6.14896, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Dependencies\Puzzle.CoreLib.NET2.dll</HintPath>
@@ -331,18 +335,6 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="ServiceTools\CheckCompatability.resx">
-      <SubType>Designer</SubType>
-      <DependentUpon>CheckCompatability.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ServiceTools\PleaseWaitDialog.resx">
-      <SubType>Designer</SubType>
-      <DependentUpon>PleaseWaitDialog.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ServiceTools\SubmitGame.resx">
-      <SubType>Designer</SubType>
-      <DependentUpon>SubmitGame.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Strings.resx">
       <SubType>Designer</SubType>
       <Generator>ResXFileCodeGenerator</Generator>
@@ -370,40 +362,10 @@
     <Compile Include="RenderControl.Designer.cs">
       <DependentUpon>RenderControl.cs</DependentUpon>
     </Compile>
-    <Compile Include="ServiceTools\CheckCompatability.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ServiceTools\CheckCompatability.Designer.cs">
-      <DependentUpon>CheckCompatability.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ServiceTools\PleaseWaitDialog.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ServiceTools\PleaseWaitDialog.Designer.cs">
-      <DependentUpon>PleaseWaitDialog.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ServiceTools\ServiceUtilities.cs" />
-    <Compile Include="ServiceTools\SubmitGame.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ServiceTools\SubmitGame.Designer.cs">
-      <DependentUpon>SubmitGame.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ServiceTools\SubmitReport.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ServiceTools\SubmitReport.Designer.cs">
-      <DependentUpon>SubmitReport.cs</DependentUpon>
-    </Compile>
     <Compile Include="Strings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Strings.resx</DependentUpon>
-    </Compile>
-    <Compile Include="Web References\CompatibilityService\Reference.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Reference.map</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -498,38 +460,7 @@
     <None Include="Resources\ToggleBreakpointIcon.png" />
     <Content Include="Resources\UmdIcon.png" />
     <None Include="Resources\WatchesIcon.png" />
-    <None Include="Web References\CompatibilityService\AddResult1.datasource">
-      <DependentUpon>Reference.map</DependentUpon>
-    </None>
-    <None Include="Web References\CompatibilityService\CompatibilityResults.datasource">
-      <DependentUpon>Reference.map</DependentUpon>
-    </None>
-    <None Include="Web References\CompatibilityService\Game.datasource">
-      <DependentUpon>Reference.map</DependentUpon>
-    </None>
-    <None Include="Web References\CompatibilityService\Reference.map">
-      <Generator>MSDiscoCodeGenerator</Generator>
-      <LastGenOutput>Reference.cs</LastGenOutput>
-    </None>
-    <None Include="Web References\CompatibilityService\Service.disco" />
     <None Include="Resources\WarningIcon.png" />
-    <None Include="Web References\CompatibilityService\Service.wsdl" />
-  </ItemGroup>
-  <ItemGroup>
-    <WebReferences Include="Web References\" />
-  </ItemGroup>
-  <ItemGroup>
-    <WebReferenceUrl Include="http://localhost:8080/PSPCompat/Service.asmx">
-      <UrlBehavior>Dynamic</UrlBehavior>
-      <RelPath>Web References\CompatibilityService\</RelPath>
-      <UpdateFromURL>http://localhost:8080/PSPCompat/Service.asmx</UpdateFromURL>
-      <ServiceLocationURL>
-      </ServiceLocationURL>
-      <CachedDynamicPropName>
-      </CachedDynamicPropName>
-      <CachedAppSettingsObjectName>Settings</CachedAppSettingsObjectName>
-      <CachedSettingsPropName>Noxa_Emulation_Psp_Player_Noxa_Emulation_Psp_CompatabilityService_Service</CachedSettingsPropName>
-    </WebReferenceUrl>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
