--- a/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
+++ b/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
@@ -102,6 +102,12 @@
     <Compile Include="Debugger\DebuggerWindow.Designer.cs">
       <DependentUpon>DebuggerWindow.cs</DependentUpon>
     </Compile>
+    <Compile Include="Debugger\Dialogs\JumpToMethodDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Debugger\Dialogs\JumpToMethodDialog.Designer.cs">
+      <DependentUpon>JumpToMethodDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Debugger\Dialogs\FindDialog.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -272,6 +278,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Debugger\DebuggerWindow.resx">
       <DependentUpon>DebuggerWindow.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Debugger\Dialogs\JumpToMethodDialog.resx">
+      <DependentUpon>JumpToMethodDialog.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Debugger\Dialogs\FindDialog.resx">
