--- a/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
+++ b/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
@@ -102,6 +102,12 @@
     <Compile Include="Debugger\DebuggerWindow.Designer.cs">
       <DependentUpon>DebuggerWindow.cs</DependentUpon>
     </Compile>
+    <Compile Include="Debugger\Dialogs\DelayThreadDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Debugger\Dialogs\DelayThreadDialog.Designer.cs">
+      <DependentUpon>DelayThreadDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Debugger\Dialogs\JumpToMethodDialog.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -280,6 +286,10 @@
       <DependentUpon>DebuggerWindow.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Debugger\Dialogs\DelayThreadDialog.resx">
+      <DependentUpon>DelayThreadDialog.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Debugger\Dialogs\JumpToMethodDialog.resx">
       <DependentUpon>JumpToMethodDialog.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -322,6 +332,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Debugger\Tools\StatisticsTool.resx">
       <DependentUpon>StatisticsTool.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Debugger\Tools\ThreadsTool.resx">
+      <DependentUpon>ThreadsTool.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="GamePicker\AdvancedGameListing.resx">
