--- a/Noxa.Emulation.Psp/Noxa.Emulation.Psp.csproj
+++ b/Noxa.Emulation.Psp/Noxa.Emulation.Psp.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Debugging\DebugModel\Breakpoint.cs" />
     <Compile Include="Debugging\DebugModel\CpuError.cs" />
     <Compile Include="Debugging\DebugModel\MemoryError.cs" />
+    <Compile Include="Debugging\DebugModel\ModuleInfo.cs" />
     <Compile Include="Debugging\DebugModel\Symbol.cs" />
     <Compile Include="Debugging\DebugModel\ThreadInfo.cs" />
     <Compile Include="Debugging\DebugModel\Variable.cs" />
