--- a/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
+++ b/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
@@ -102,6 +102,12 @@
     <Compile Include="Debugger\DebuggerWindow.Designer.cs">
       <DependentUpon>DebuggerWindow.cs</DependentUpon>
     </Compile>
+    <Compile Include="Debugger\Dialogs\RenameDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Debugger\Dialogs\RenameDialog.Designer.cs">
+      <DependentUpon>RenameDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Debugger\Dialogs\DelayThreadDialog.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -288,6 +294,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Debugger\DebuggerWindow.resx">
       <DependentUpon>DebuggerWindow.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Debugger\Dialogs\RenameDialog.resx">
+      <DependentUpon>RenameDialog.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Debugger\Dialogs\DelayThreadDialog.resx">
